force-app/main/licensetypes/objects/License_Type_Definition__mdt/License_Type_Definition__mdt.object-meta.xml
<CustomObject>
    <description>Contains all information with regards to License Types. Integrates the different parts of the solution.</description>
    <label>License Type Definition</label>
    <pluralLabel>License Type Definitions</pluralLabel>
</CustomObject>