force-app/main/licensetypes/objects/License_Type_Definition__mdt/fields/Licence_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Licence_Type_Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The name of the license type as returned by LicenseType.name()</description>
    <inlineHelpText>The name of the license type as returned by LicenseType.name()</inlineHelpText>
    <label>Licence Type Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>