force-app/main/licensetypes/objects/License_Type_Definition__mdt/fields/Nr_Of_Seats_Feature_Param_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Nr_Of_Seats_Feature_Param_API_Name__c</fullName>
    <description>The API Name of the Feature parameter containing the nr of seats provisioned for the License Type</description>
    <inlineHelpText>The API Name of the Feature parameter containing the nr of seats provisioned for the License Type</inlineHelpText>
    <label>Nr Of Seats Feature Param API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>