force-app/main/licensetypes/objects/License_Type_Definition__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>The order in which the license types should be shown in the Company.info setup. -1 means don&#39;t show.</description>
    <inlineHelpText>The order in which the license types should be shown in the Company.info setup. -1 means don&#39;t show.</inlineHelpText>
    <label>Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>