force-app/main/licensetypes/objects/License_Type_Definition__mdt/fields/Permission_Set_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_API_Name__c</fullName>
    <description>The API Name of the permission set that contains the permissions for the given license type.</description>
    <inlineHelpText>The API Name of the permission set that contains the permissions for the given license type.</inlineHelpText>
    <label>Permission Set API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>