force-app/main/licensetypes/objects/License_Type_Definition__mdt/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The title of the license type as shown on the License Management Card for the License Type.</description>
    <inlineHelpText>The title of the license type as shown on the License Management Card for the License Type.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>